--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>SocialApp</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="assets/forms.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
